--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -8,6 +8,9 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+    paths:
+      - "content/blog/**/*.md"
+      - "content/blog/**/*.mdx"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
